# TcpChat

./: CMakeLists.txt  ReadMe.md
include/: chat_errors.h  connection.h  connection_listener.h  incoming_events_listener.h  interuptable.h  io_operations.h  looped_thread.h  manual_control.h  message.h  messages_buffer.h  runnable.h  server.h  server_connection.h  server_log.h  setup.h  thread_pool.h  utils.h  worker.h  workers.h  workers_pool.h
include/client/: client.h  event_listener_adapter.h  message_widget.h
src/: CMakeLists.txt  chat_errors.cpp  connection.cpp  connection_listener.cpp  incoming_events_listener.cpp  interuptable.cpp  io_operations.cpp  looped_thread.cpp  main.cpp  manual_control.cpp  message.cpp  messages_buffer.cpp  server.cpp  server_connection.cpp  server_log.cpp  server_main.cpp  utils.cpp  worker.cpp  workers_pool.cpp
src/client/: CMakeLists.txt  client.cpp  client_main.cpp  dialog_name.cpp  event_listener_adapter.cpp  message_widget.cpp
test/: CMakeLists.txt  chat_test.cpp
ui/: client.ui  message_widget.ui
